# ros2_ws_forpc

./: .gitignore  README.md  build_ros2_ws.sh  frames_2025-11-05_08.07.53.gv  generate_urdf.sh  install_ros2_deps.sh  launch_gazebo.sh  new_world.sdf  restart_nodes.sh  setup_ros2_repo.sh
Map/: aMAP.material
models/: simple_bot.sdf  simple_bot.urdf  simple_bot.xacro
models/adeep/: CMakeLists.txt  package.xml
models/adeep/launch/: display.launch  gazebo.launch
models/adeep/meshes/: camera.STL  left_front_wheel.STL  left_rear_wheel.STL  right_front_wheel.STL  right_rear_wheel.STL  ultrasonic.STL
models/adeep/urdf/: adeep.csv  adeep.urdf
models/my_arena/: model.sdf
models/my_arena/materials/scripts/: arena.material
models/new_arena/: arena.blend  arena.dae  model.config  new_arena.sdf
models/simple_bot/: model.config  model.sdf
models/solidwork_model/: 01_01.ipt  01_02.ipt  adeep.SLDASM  camera.SLDPRT  frame.SLDPRT  swxJRNL.swj
models/solidwork_model/adeep_urdf/: CMakeLists.txt  package.xml
models/solidwork_model/adeep_urdf/launch/: gazebo.launch
src/simple_bot/: package.xml  setup.cfg  setup.py
src/simple_bot/config/: simple_bot_controllers.yaml
src/simple_bot/launch/: simple_bot.launch.py  simple_bot_control.launch.py
src/simple_bot/urdf/: simple_bot.urdf  simple_bot.xacro
src/simple_bot/worlds/: simple_map.sdf  simple_map.world
src/yolo_image_viewer/: package.xml  setup.cfg  setup.py
src/yolo_image_viewer/yolo_image_viewer/: yolo_node.py
worlds/: new_map.sdf  simple_map.sdf  simple_map.world
(+17 files in other folders)
